feat: Last part
Signed-off-by: jdiaconu <jdiaconu@cisco.com>

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -22,13 +22,13 @@ dependencies = ["grpcio", "protobuf", "grpcio-tools", "protoc_gen_openapiv2", "p
 
 [project.urls]
 "Homepage" = "https://github.com/outshift/identity-service-sdk"
-"Bug Tracker" = "https://github.com/agntcy/identity-service-sdk/issues"
+"Bug Tracker" = "https://github.com/outshift/identity-service-sdk/issues"
 
 [project.scripts]
 identity-cli = "identityservice.cli:app"
 
 [tool.setuptools]
-packages = ["identityservice", "identityservice.commands", "identityservice.auth", "identityservice.badge", "openapiv3", "google.api", "agntcy.identity.service.v1alpha1", "agntcy.identity.service.shared.v1alpha1"]
+packages = ["identityservice", "identityservice.commands", "identityservice.auth", "identityservice.badge", "openapiv3", "google.api", "outshift.identity.service.v1alpha1", "outshift.identity.service.shared.v1alpha1"]
 
 [tool.pytest.ini_options]
 minversion = "8.0.0"
