--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,4 +3,4 @@
 # List of approvers for Identity project
 #
 #####################################################
-* @jadiaconu @beryder @mkedjour @rafaelsilva29 @copasseron @hmuyal @mayannuz @agntcy/identity-maintainers
+* @jadiaconu @beryder @mkedjour @rafaelsilva29 @copasseron @hmuyal @mayannuz
