chore: Update license
Signed-off-by: jdiaconu <jdiaconu@cisco.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,4 +8,4 @@ repos:
     rev: 3d89fa361d3965c9b4a0217057236c0713ed75e6
     hooks:
       - id: addlicense # Add license header to files
-        args: ["-c", "Copyright 2025 Cisco Systems, Inc. and its affiliates", "-l", "Apache-2.0", "."]
+        args: ["-c", "Cisco Systems, Inc. and its affiliates", "-l", "Apache-2.0", "."]
