--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -13,12 +13,12 @@ authors = [
 ]
 description = "Agent Identity Service SDK & CLI for Python"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 license = "Apache-2.0"
 classifiers = [
     "Programming Language :: Python :: 3",
 ]
-dependencies = ["grpcio", "protobuf", "grpcio-tools", "protoc_gen_openapiv2", "python-dotenv", "mcp", "typer", "httpx", "starlette", "a2a-sdk"]
+dependencies = ["grpcio", "protobuf", "grpcio-tools", "protoc_gen_openapiv2", "python-dotenv", "mcp (<2.0.0)", "typer", "httpx", "starlette", "a2a-sdk (<0.3.0)"]
 
 [project.urls]
 "Homepage" = "https://github.com/outshift/identity-service-sdk"
