feat: Update to trigger linter
Signed-off-by: jdiaconu <jdiaconu@cisco.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,16 @@ on:
 
 # Declare default permissions as read-only
 permissions: read-all
+
+jobs:
+  test-sdk:
+    name: Test SDK
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
