--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -44,8 +44,7 @@ jobs:
 
       - name: Build package
         run: |
-          ls -la
-          python -m build
+          cd python && python -m build
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
