chore: Update pypi linter
Signed-off-by: jdiaconu <jdiaconu@cisco.com>

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -49,5 +49,5 @@ jobs:
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: identity-service-sdk/python/dist
+          packages-dir: python/dist
           password: ${{ secrets.PYPI_API_TOKEN }}
