chore: Update pypi linter
Signed-off-by: jdiaconu <jdiaconu@cisco.com>

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -46,8 +46,11 @@ jobs:
         run: |
           cd python && python -m build
 
+      - name: Show files
+        run: ls -l ./python/dist
+
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: python/dist
+          packages-dir: ./python/dist
           password: ${{ secrets.PYPI_API_TOKEN }}
